--- a/admin_area/css/style.css
+++ b/admin_area/css/style.css
@@ -101,13 +101,38 @@ body{
 
 }
 
+.panel-green>a:hover{
+    color: #3d8c3d;
+
+}
+
+
+
+
+.panel-orange{
+    border-color: #f0ad4e;
+}
+
 .panel-orange>.panel-heading{
-color: #ffffff;
+    color: #ffffff;
     background-color: #f0ad4e;
 }
+
 .panel-orange>a{
     color: #f0ad4e
 }
+
+.panel-orange>a:hover{
+    color: #ba8539;
+}
+
+
+
+
+.panel-red{
+    border-color: #d9534f;
+}
+
 .panel-red>.panel-heading{
     color: #ffffff;
     background-color: #d9534f;
@@ -116,3 +141,81 @@ color: #ffffff;
 .panel-red>a{
     color: #d9534f;
 }
+
+.panel-red>a:hover{
+    color: #8d4341;
+}
+
+
+/*Admin Profile Styling */
+
+.panel-body{
+    border-radius: 5px;
+
+}
+
+.thumb.info{
+    position: relative;
+
+}
+
+.rounded{
+    border-radius: 10px;
+}
+
+hr{
+    border: 0;
+    height: 1px;
+    margin: 10px 0 10px 0;
+}
+hr.dotted{
+    border-bottom: 1px #DDDDDD dotted;
+    height: 0px;
+    margin: 10px 0 10px 0;
+}
+
+.thumb-info.thumb-info-title{
+    background: rgba(36,27,28,.9);
+    bottom:10%;
+    color: #FFFFFF;
+    font-size:  18px;
+    font-weight: 600;
+    left: 0;
+    letter-spacing: -1px;
+    padding: 9px 11px 9px;
+    position: absolute;
+    text-transform: uppercase;
+    z-index: 1;
+
+}
+
+.thumb-info.thumb-info-inner{
+    display: block;
+
+}
+
+.thumb-info.thumb-info-type{
+    background: #8088cc;
+    display: inline-block;
+    border-radius: 2px;
+    float: left;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0;
+    margin: 8px -2px -15px -2px;
+    padding: 2px 9px;
+    text-transform: none;
+}
+.widget-content-expanded{
+    font-size: 15px;
+
+}
+.widget-content-expanded span{
+    font-weight: 600;
+
+}
+.widget-content-expanded i{
+    color: #0088cc;
+    margin-right: 5px;
+}
+
